# SimpleDynamicEQ

./: .gitignore  CMakeLists.txt  README.md  build.ps1  dev.ps1
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/DSP/: BiquadFilter.cpp  BiquadFilter.h  DynamicEQ.cpp  DynamicEQ.h  EQBand.cpp  EQBand.h  FrequencyProblemDetector.cpp  FrequencyProblemDetector.h  LinearPhaseEQ.cpp  LinearPhaseEQ.h  MidSideProcessor.cpp  MidSideProcessor.h  SpectrumAnalyzer.cpp  SpectrumAnalyzer.h
src/GUI/: AnalyzerComponent.cpp  AnalyzerComponent.h  AudioFilePlayer.cpp  AudioFilePlayer.h  BandControlPanel.cpp  BandControlPanel.h  BandHandle.cpp  BandHandle.h  EQCurveComponent.cpp  EQCurveComponent.h  FactoryPresets.h  KnobLookAndFeel.cpp  KnobLookAndFeel.h  ProEQColors.h
